@@ -1,4 +1,4 @@
-// Copyright 2020-2025 The Defold Foundation
+// Copyright 2020-2026 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
@@ -21,22 +21,58 @@ import org.junit.Test;
 import org.junit.Assert;
 
 import com.dynamo.gamesys.proto.Gui;
+import com.dynamo.gamesys.proto.Gui.Property.PropertyType;
 import com.dynamo.gamesys.proto.Gui.SceneDesc.LayoutDesc;
 import com.dynamo.gamesys.proto.Gui.NodeDesc;
+import com.dynamo.proto.DdfMath.Quat;
+import com.dynamo.proto.DdfMath.Vector3;
+import com.dynamo.proto.DdfMath.Vector4;
 import com.dynamo.bob.BuilderParams;
 import com.dynamo.bob.ProtoParams;
 import com.dynamo.bob.ProtoBuilder;
 import com.dynamo.bob.ClassLoaderScanner;
+import com.dynamo.bob.CompileExceptionError;
+import com.dynamo.bob.Project;
+import com.dynamo.bob.fs.DefaultFileSystem;
+import com.dynamo.bob.util.MurmurHash;
 
 public class GuiBuilderTest extends AbstractProtoBuilderTest {
 
     private static final float EPSILON = 0.00001f;
     private ClassLoaderScanner scanner = null;
 
+    @GuiCustomNode(type = "Spine")
+    private static class TestSpineGuiNode implements IGuiCustomNode {
+        public static void registerProperties(IGuiCustomType type) {
+            type.addProperty("spine_scene", "", PropertyType.TYPE_STRING, IGuiCustomType.EDIT_TYPE_RESOURCE);
+            type.addProperty("spine_default_animation", "", PropertyType.TYPE_STRING, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("spine_skin", "", PropertyType.TYPE_STRING, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("spine_create_bones", false, PropertyType.TYPE_BOOLEAN, IGuiCustomType.EDIT_TYPE_DEFAULT);
+        }
+
+        public static void migrateProperties(Map<String, Object> properties) {
+            properties.remove("spine_node_child");
+        }
+    }
+
+    @GuiCustomNode(type = "Typed")
+    private static class TestTypedGuiNode implements IGuiCustomNode {
+        public static void registerProperties(IGuiCustomType type) {
+            type.addProperty("number", 1.5f, PropertyType.TYPE_NUMBER, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("boolean", true, PropertyType.TYPE_BOOLEAN, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("hash", "hash_value", PropertyType.TYPE_HASH, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("string", "text", PropertyType.TYPE_STRING, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("vector3", Vector3.newBuilder().setX(1.0f).setY(2.0f).setZ(3.0f).build(), PropertyType.TYPE_VECTOR3, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("vector4", Vector4.newBuilder().setX(4.0f).setY(5.0f).setZ(6.0f).setW(7.0f).build(), PropertyType.TYPE_VECTOR4, IGuiCustomType.EDIT_TYPE_DEFAULT);
+            type.addProperty("quat", Quat.newBuilder().setX(8.0f).setY(9.0f).setZ(10.0f).setW(11.0f).build(), PropertyType.TYPE_QUAT, IGuiCustomType.EDIT_TYPE_DEFAULT);
+        }
+    }
 
     public GuiBuilderTest() throws IOException {
         this.scanner = new ClassLoaderScanner(this.getClass().getClassLoader());
         registerProtoBuilderNames();
+        getProject().getGuiCustomTypeRegistry().register(TestSpineGuiNode.class);
+        getProject().getGuiCustomTypeRegistry().register(TestTypedGuiNode.class);
     }
 
     private boolean nodeExists(Gui.SceneDesc scene, String nodeId)
@@ -95,8 +131,8 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
     private static void startBoxNode(StringBuilder src, String id, String parent) {
         src.append("nodes {\n");
         src.append("  type: TYPE_BOX\n");
-        src.append("  id: \""+id+"\"\n");
-        src.append("  parent: \""+parent+"\"\n");
+        src.append("  id: \"").append(id).append("\"\n");
+        src.append("  parent: \"").append(parent).append("\"\n");
     }
 
     private static void addBoxNode(StringBuilder src, String id, String parent) {
@@ -107,21 +143,70 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
     private static void addTextNode(StringBuilder src, String id, String parent, String text) {
         src.append("nodes {\n");
         src.append("  type: TYPE_TEXT\n");
-        src.append("  id: \""+id+"\"\n");
-        src.append("  parent: \""+parent+"\"\n");
-        src.append("  text: \""+text+"\"\n");
+        src.append("  id: \"").append(id).append("\"\n");
+        src.append("  parent: \"").append(parent).append("\"\n");
+        src.append("  text: \"").append(text).append("\"\n");
         src.append("}\n");
+    }
+
+    private void addSpineResource(StringBuilder src, String name) {
+        src.append("\nresources {\n");
+        src.append("  name: \"").append(name).append("\"\n");
+        src.append("  path: \"/assets/").append(name).append(".gui\"\n");
+        src.append("}\n");
+        addFile("/assets/"+name+".gui", createGui().toString());
+    }
+
+    private void addGuiResource(StringBuilder src, String name) {
+        src.append("\nresources {\n");
+        src.append("  name: \"").append(name).append("\"\n");
+        src.append("  path: \"/assets/").append(name).append(".gui\"\n");
+        src.append("}\n");
+        addFile("/assets/"+name+".gui", createGui().toString());
+    }
+
+    private static void startSpineCustomNode(StringBuilder src, String id) {
+        startCustomNode(src, id, "Spine");
+    }
+
+    private static void startCustomNode(StringBuilder src, String id, String typeName) {
+        src.append("\nnodes {\n");
+        src.append("  type: TYPE_CUSTOM\n");
+        src.append("  custom_type: ").append(Integer.toUnsignedLong(MurmurHash.hash32(typeName))).append("\n");
+        src.append("  custom_type_name: \"").append(typeName).append("\"\n");
+        src.append("  id: \"").append(id).append("\"\n");
+    }
+
+    private static void startCustomNodeWithTypeName(StringBuilder src, String id, String typeName) {
+        src.append("\nnodes {\n");
+        src.append("  type: TYPE_CUSTOM\n");
+        src.append("  custom_type_name: \"").append(typeName).append("\"\n");
+        src.append("  id: \"").append(id).append("\"\n");
+    }
+
+    private static void startLegacySpineNode(StringBuilder src, String id) {
+        src.append("\nnodes {\n");
+        src.append("  type: TYPE_SPINE\n");
+        src.append("  id: \"").append(id).append("\"\n");
+    }
+
+    private static void addLegacySpineProperties(StringBuilder src) {
+        src.append("  spine_scene: \"spineboy\"\n");
+        src.append("  spine_default_animation: \"walk\"\n");
+        src.append("  spine_skin: \"default\"\n");
+        src.append("  spine_node_child: true\n");
+        src.append("  spine_create_bones: true\n");
     }
 
     private static void addTemplateNode(StringBuilder src, String id, String parent, String template, String[] extraProperties) {
         src.append("nodes {\n");
         src.append("  type: TYPE_TEMPLATE\n");
-        src.append("  id: \""+id+"\"\n");
-        src.append("  parent: \""+parent+"\"\n");
+        src.append("  id: \"").append(id).append("\"\n");
+        src.append("  parent: \"").append(parent).append("\"\n");
         for (String prop: extraProperties) { 
             src.append(prop);
         }
-        src.append("  template: \""+template+"\"\n");
+        src.append("  template: \"").append(template).append("\"\n");
         src.append("}\n");
     }
 
@@ -132,12 +217,12 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
 
     private static void startOverriddenNode(StringBuilder src, NodeDesc.Type type, String id, String parent, boolean templateNodeChild, List<Integer> overriddenFields) {
         src.append("nodes {\n");
-        src.append("  type: "+type+"\n");
-        src.append("  id: \""+id+"\"\n");
-        src.append("  parent: \""+parent+"\"\n");
-        src.append("  template_node_child: "+templateNodeChild+"\n");
+        src.append("  type: ").append(type).append("\n");
+        src.append("  id: \"").append(id).append("\"\n");
+        src.append("  parent: \"").append(parent).append("\"\n");
+        src.append("  template_node_child: ").append(templateNodeChild).append("\n");
         for(int num : overriddenFields) {
-            src.append("  overridden_fields: "+num+"\n");
+            src.append("  overridden_fields: ").append(num).append("\n");
         }
     }
 
@@ -152,7 +237,7 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
 
     private static void startLayout(StringBuilder src, String name) {
         src.append("layouts {\n");
-        src.append("  name: \""+name+"\"\n");
+        src.append("  name: \"").append(name).append("\"\n");
     }
 
     private static void finishLayout(StringBuilder src) {
@@ -190,8 +275,8 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
     }
 
     private static NodeDesc findNode(Gui.SceneDesc gui, String layoutName, String nodeName) {
-        List<NodeDesc> nodesList = Arrays.asList();
-        if (layoutName.equals("")) {
+        List<NodeDesc> nodesList = List.of();
+        if (layoutName.isEmpty()) {
             nodesList = gui.getNodesList();
         }
         else {
@@ -209,9 +294,304 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
         return null;
     }
 
+    private static Gui.Property findCustomProperty(NodeDesc node, String propertyName) {
+        long propertyNameHash = MurmurHash.hash64(propertyName);
+        for (Gui.Property property : node.getCustomPropertiesList()) {
+            if (property.hasIdHash() && property.getIdHash() == propertyNameHash) {
+                return property;
+            }
+        }
+        return null;
+    }
+
+    private static Gui.SceneDesc.ResourceDesc findResource(Gui.SceneDesc gui, String resourceName) {
+        for (Gui.SceneDesc.ResourceDesc resource : gui.getResourcesList()) {
+            if (resource.getName().equals(resourceName)) {
+                return resource;
+            }
+        }
+        return null;
+    }
+
     @Test
     public void test() throws Exception {
         // Kept empty as a future working template
+    }
+
+    @Test
+    public void testGenericResourcesUseRegisteredOutputExtension() throws Exception {
+        StringBuilder src = createGui();
+        addGuiResource(src, "panel");
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        Gui.SceneDesc.ResourceDesc resource = findResource(gui, "panel");
+
+        Assert.assertNotNull(resource);
+        Assert.assertEquals("/assets/panel.guic", resource.getPath());
+    }
+
+    @Test
+    public void testSpineCustomNodePropertiesAreMigrated() throws Exception {
+        StringBuilder src = createGui();
+        addSpineResource(src, "spineboy");
+        startSpineCustomNode(src, "spine");
+        addLegacySpineProperties(src);
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "spine");
+
+        Assert.assertEquals(NodeDesc.Type.TYPE_CUSTOM, node.getType());
+        Assert.assertEquals(405028931, node.getCustomType());
+        Assert.assertFalse(node.hasCustomTypeName());
+        Assert.assertFalse(node.hasSpineScene());
+        Assert.assertFalse(node.hasSpineDefaultAnimation());
+        Assert.assertFalse(node.hasSpineSkin());
+        Assert.assertFalse(node.hasSpineNodeChild());
+        Assert.assertFalse(node.hasSpineCreateBones());
+        Assert.assertEquals(4, node.getCustomPropertiesCount());
+
+        Gui.Property spineScene = findCustomProperty(node, "spine_scene");
+        Gui.Property defaultAnimation = findCustomProperty(node, "spine_default_animation");
+        Gui.Property spineSkin = findCustomProperty(node, "spine_skin");
+        Gui.Property spineCreateBones = findCustomProperty(node, "spine_create_bones");
+        Assert.assertNotNull(spineScene);
+        Assert.assertNotNull(defaultAnimation);
+        Assert.assertNotNull(spineSkin);
+        Assert.assertNotNull(spineCreateBones);
+        Assert.assertFalse(spineScene.hasId());
+        Assert.assertEquals(Gui.Property.PropertyType.TYPE_STRING, spineScene.getType());
+        Assert.assertEquals(Gui.Property.PropertyType.TYPE_BOOLEAN, spineCreateBones.getType());
+        Assert.assertEquals("spineboy", spineScene.getString());
+        Assert.assertEquals("walk", defaultAnimation.getString());
+        Assert.assertEquals("default", spineSkin.getString());
+        Assert.assertTrue(spineCreateBones.getBoolean());
+    }
+
+    @Test
+    public void testLegacySpineNodeBecomesCustomSpineNode() throws Exception {
+        StringBuilder src = createGui();
+        addSpineResource(src, "spineboy");
+        startLegacySpineNode(src, "spine");
+        addLegacySpineProperties(src);
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "spine");
+
+        Assert.assertEquals(NodeDesc.Type.TYPE_CUSTOM, node.getType());
+        Assert.assertEquals(405028931, node.getCustomType());
+        Assert.assertEquals("spineboy", findCustomProperty(node, "spine_scene").getString());
+    }
+
+    @Test
+    public void testExistingCustomPropertiesWinOverMigratedValues() throws Exception {
+        StringBuilder src = createGui();
+        addSpineResource(src, "spineboy");
+        startSpineCustomNode(src, "spine");
+        addLegacySpineProperties(src);
+        src.append("  custom_properties {\n");
+        src.append("    id: \"spine_default_animation\"\n");
+        src.append("    type: TYPE_STRING\n");
+        src.append("    string: \"existing\"\n");
+        src.append("  }\n");
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "spine");
+
+        Assert.assertEquals(4, node.getCustomPropertiesCount());
+        Gui.Property property = findCustomProperty(node, "spine_default_animation");
+        Assert.assertNotNull(property);
+        Assert.assertFalse(property.hasId());
+        Assert.assertEquals("existing", property.getString());
+    }
+
+    @Test(expected = CompileExceptionError.class)
+    public void testCustomResourcePropertyIsValidated() throws Exception {
+        StringBuilder src = createGui();
+        startSpineCustomNode(src, "spine");
+        src.append("  spine_scene: \"missing\"\n");
+        finishNode(src);
+
+        buildGui(src, "/test.gui");
+    }
+
+    @Test
+    public void testLayoutSpineOverridesAreMigrated() throws Exception {
+        StringBuilder src = createGui();
+        addSpineResource(src, "spineboy");
+        startSpineCustomNode(src, "spine");
+        addLegacySpineProperties(src);
+        finishNode(src);
+
+        startLayout(src, "Landscape");
+        src.append("  nodes {\n");
+        src.append("    type: TYPE_CUSTOM\n");
+        src.append("    custom_type: 405028931\n");
+        src.append("    id: \"spine\"\n");
+        src.append("    overridden_fields: "+NodeDesc.SPINE_DEFAULT_ANIMATION_FIELD_NUMBER+"\n");
+        src.append("    spine_default_animation: \"jump\"\n");
+        src.append("  }\n");
+        finishLayout(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "Landscape", "spine");
+
+        Assert.assertFalse(node.hasSpineDefaultAnimation());
+        Assert.assertEquals("jump", findCustomProperty(node, "spine_default_animation").getString());
+    }
+
+    // Legacy Spine template child overrides use old Spine field numbers. When the
+    // node is migrated to a custom Spine node, those overrides must become custom
+    // property overrides so the template value does not win.
+    @Test
+    public void testTemplateSpineOverridesAreMigrated() throws Exception {
+        StringBuilder templateSrc = createGui();
+        addSpineResource(templateSrc, "spineboy");
+        startLegacySpineNode(templateSrc, "spine");
+        addLegacySpineProperties(templateSrc);
+        finishNode(templateSrc);
+        addFile("/template.gui", templateSrc.toString());
+
+        StringBuilder referencingSrc = createGui();
+        addTemplateNode(referencingSrc, "template", "", "/template.gui");
+        startOverriddenNode(referencingSrc, NodeDesc.Type.TYPE_CUSTOM, "template/spine", "template", true, List.of(NodeDesc.SPINE_DEFAULT_ANIMATION_FIELD_NUMBER));
+        referencingSrc.append("  spine_default_animation: \"jump\"\n");
+        finishNode(referencingSrc);
+
+        Gui.SceneDesc gui = buildGui(referencingSrc, "/test.gui");
+        NodeDesc node = findNode(gui, "", "template/spine");
+
+        Assert.assertNotNull(node);
+        Assert.assertFalse(node.hasSpineDefaultAnimation());
+        Assert.assertEquals("jump", findCustomProperty(node, "spine_default_animation").getString());
+    }
+
+    @Test
+    public void testCustomPropertyDefaultsUseRegisteredTypes() throws Exception {
+        StringBuilder src = createGui();
+        startCustomNode(src, "typed", "Typed");
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "typed");
+
+        Assert.assertEquals(7, node.getCustomPropertiesCount());
+        Assert.assertEquals(PropertyType.TYPE_NUMBER, findCustomProperty(node, "number").getType());
+        Assert.assertEquals(1.5f, findCustomProperty(node, "number").getNumber(), EPSILON);
+        Assert.assertEquals(PropertyType.TYPE_BOOLEAN, findCustomProperty(node, "boolean").getType());
+        Assert.assertTrue(findCustomProperty(node, "boolean").getBoolean());
+        Assert.assertEquals(PropertyType.TYPE_HASH, findCustomProperty(node, "hash").getType());
+        Assert.assertEquals(MurmurHash.hash64("hash_value"), findCustomProperty(node, "hash").getHash());
+        Assert.assertEquals(PropertyType.TYPE_STRING, findCustomProperty(node, "string").getType());
+        Assert.assertEquals("text", findCustomProperty(node, "string").getString());
+        Assert.assertEquals(PropertyType.TYPE_VECTOR3, findCustomProperty(node, "vector3").getType());
+        Assert.assertEquals(3.0f, findCustomProperty(node, "vector3").getVector3().getZ(), EPSILON);
+        Assert.assertEquals(PropertyType.TYPE_VECTOR4, findCustomProperty(node, "vector4").getType());
+        Assert.assertEquals(7.0f, findCustomProperty(node, "vector4").getVector4().getW(), EPSILON);
+        Assert.assertEquals(PropertyType.TYPE_QUAT, findCustomProperty(node, "quat").getType());
+        Assert.assertEquals(11.0f, findCustomProperty(node, "quat").getQuat().getW(), EPSILON);
+    }
+
+    @Test
+    public void testCustomTypeNameResolvesCustomType() throws Exception {
+        StringBuilder src = createGui();
+        startCustomNodeWithTypeName(src, "typed", "Typed");
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "typed");
+
+        Assert.assertEquals(NodeDesc.Type.TYPE_CUSTOM, node.getType());
+        Assert.assertEquals(MurmurHash.hash32("Typed"), node.getCustomType());
+        Assert.assertFalse(node.hasCustomTypeName());
+        Assert.assertEquals(7, node.getCustomPropertiesCount());
+        Assert.assertEquals(MurmurHash.hash64("hash_value"), findCustomProperty(node, "hash").getHash());
+    }
+
+    @Test
+    public void testCustomTypesAreProjectLocal() throws Exception {
+        Project project = new Project(new DefaultFileSystem());
+        Project otherProject = new Project(new DefaultFileSystem());
+        try {
+            project.getGuiCustomTypeRegistry().register(TestTypedGuiNode.class);
+
+            Assert.assertNotNull(project.getGuiCustomTypeRegistry().getByName("Typed"));
+            Assert.assertNull(otherProject.getGuiCustomTypeRegistry().getByName("Typed"));
+        } finally {
+            project.dispose();
+            otherProject.dispose();
+        }
+    }
+
+    @Test(expected = CompileExceptionError.class)
+    public void testUnknownCustomTypeNameFailsBuild() throws Exception {
+        StringBuilder src = createGui();
+        startCustomNodeWithTypeName(src, "missing", "Missing");
+        finishNode(src);
+
+        buildGui(src, "/test.gui");
+    }
+
+    @Test
+    public void testHashCustomPropertyStringIsHashed() throws Exception {
+        StringBuilder src = createGui();
+        startCustomNode(src, "typed", "Typed");
+        src.append("  custom_properties {\n");
+        src.append("    id: \"hash\"\n");
+        src.append("    type: TYPE_HASH\n");
+        src.append("    string: \"readable_hash\"\n");
+        src.append("  }\n");
+        finishNode(src);
+
+        Gui.SceneDesc gui = buildGui(src, "/test.gui");
+        NodeDesc node = findNode(gui, "", "typed");
+        Gui.Property property = findCustomProperty(node, "hash");
+
+        Assert.assertNotNull(property);
+        Assert.assertFalse(property.hasId());
+        Assert.assertEquals(PropertyType.TYPE_HASH, property.getType());
+        Assert.assertTrue(property.hasHash());
+        Assert.assertFalse(property.hasString());
+        Assert.assertEquals(MurmurHash.hash64("readable_hash"), property.getHash());
+    }
+
+    // Mirrors integration.gui-test/custom-gui-template-custom-property-override-preserves-base-properties-test.
+    // A sparse template override of one custom property must preserve other non-default base custom properties.
+    @Test
+    public void testTemplateCustomPropertyOverridePreservesBaseProperties() throws Exception {
+        StringBuilder templateSrc = createGui();
+        startCustomNode(templateSrc, "typed", "Typed");
+        templateSrc.append("  custom_properties {\n");
+        templateSrc.append("    id: \"hash\"\n");
+        templateSrc.append("    type: TYPE_HASH\n");
+        templateSrc.append("    string: \"base_hash\"\n");
+        templateSrc.append("  }\n");
+        templateSrc.append("  custom_properties {\n");
+        templateSrc.append("    id: \"number\"\n");
+        templateSrc.append("    type: TYPE_NUMBER\n");
+        templateSrc.append("    number: 2.0\n");
+        templateSrc.append("  }\n");
+        finishNode(templateSrc);
+        addFile("/template.gui", templateSrc.toString());
+
+        StringBuilder referencingSrc = createGui();
+        addTemplateNode(referencingSrc, "template", "", "/template.gui");
+        startOverriddenNode(referencingSrc, NodeDesc.Type.TYPE_CUSTOM, "template/typed", "template", true, List.of());
+        referencingSrc.append("  custom_properties {\n");
+        referencingSrc.append("    id: \"number\"\n");
+        referencingSrc.append("    type: TYPE_NUMBER\n");
+        referencingSrc.append("    number: 7.0\n");
+        referencingSrc.append("  }\n");
+        finishNode(referencingSrc);
+
+        Gui.SceneDesc gui = buildGui(referencingSrc, "/test.gui");
+        NodeDesc node = findNode(gui, "", "template/typed");
+
+        Assert.assertNotNull(node);
+        Assert.assertEquals(MurmurHash.hash64("base_hash"), findCustomProperty(node, "hash").getHash());
+        Assert.assertEquals(7.0f, findCustomProperty(node, "number").getNumber(), EPSILON);
     }
 
     // https://github.com/defold/defold/issues/6151
@@ -221,9 +601,9 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
         Gui.SceneDesc gui = buildGui(src, "/test.gui");
         NodeDesc node = findNode(gui, "Landscape", "template/text");
 
-        Assert.assertFalse("Can't find node!", node == null);
+        Assert.assertNotNull("Can't find node!", node);
         Assert.assertFalse(node.getClippingVisible());
-        Assert.assertEquals(node.getText(), "defaultText");
+        Assert.assertEquals("defaultText", node.getText());
     }
 
     @Test
@@ -242,8 +622,8 @@ public class GuiBuilderTest extends AbstractProtoBuilderTest {
         NodeDesc boxNode = findNode(gui, "", "template/box");
         NodeDesc textNode = findNode(gui, "", "template/text");
 
-        Assert.assertFalse("Can't find box node!", boxNode == null);
-        Assert.assertFalse("Can't find text node!", textNode == null);
+        Assert.assertNotNull("Can't find box node!", boxNode);
+        Assert.assertNotNull("Can't find text node!", textNode);
         Assert.assertFalse(boxNode.getEnabled());
         Assert.assertTrue(textNode.getEnabled());
     }
