@@ -1,4 +1,4 @@
-// Copyright 2020-2025 The Defold Foundation
+// Copyright 2020-2026 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
@@ -14,36 +14,50 @@
 
 package com.dynamo.bob.test;
 
+import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
-import static org.junit.matchers.JUnitMatchers.hasItem;
+import static org.junit.Assert.fail;
 
+import java.io.File;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import com.dynamo.bob.Bob;
 import com.dynamo.bob.Builder;
 import com.dynamo.bob.BuilderParams;
 import com.dynamo.bob.CompileExceptionError;
 import com.dynamo.bob.CopyBuilder;
 import com.dynamo.bob.MultipleCompileException;
-import com.dynamo.bob.NullProgress;
+import com.dynamo.bob.Progress;
 import com.dynamo.bob.ClassLoaderScanner;
 import com.dynamo.bob.Project;
 import com.dynamo.bob.Task;
 import com.dynamo.bob.Task.TaskBuilder;
 import com.dynamo.bob.fs.IResource;
+import com.dynamo.bob.fs.ResourceUtil;
 import com.dynamo.bob.test.util.MockFileSystem;
 import com.dynamo.bob.test.util.MockResource;
 import com.dynamo.bob.TaskResult;
@@ -54,6 +68,15 @@ public class JBobTest {
 
     @BuilderParams(name = "InCopyBuilderMulti", inExts = ".in2", outExt = ".out")
     public static class InCopyBuilderMulti extends InCopyBuilder {}
+
+    @BuilderParams(name = "ConstructorException", inExts = ".in_constructor_error", outExt = ".out")
+    public static class ConstructorExceptionBuilder extends CopyBuilder {
+        static final CompileExceptionError ERROR = new CompileExceptionError("Failed to construct builder");
+
+        public ConstructorExceptionBuilder() throws CompileExceptionError {
+            throw ERROR;
+        }
+    }
 
     @BuilderParams(name = "CBuilder", inExts = ".c", outExt = ".o")
     public static class CBuilder extends CopyBuilder {
@@ -180,7 +203,7 @@ public class JBobTest {
     }
 
     List<TaskResult> build() throws IOException, CompileExceptionError, MultipleCompileException {
-        return project.build(new NullProgress(), "build");
+        return project.build(Progress.discarding(), "build");
     }
 
     @After
@@ -195,12 +218,47 @@ public class JBobTest {
     }
 
     @Test
+    public void testJarPackageScanSkipsMissingJars() throws Exception {
+        Path validJarPath = createJarWithClass("bob-valid-classpath", "com/example/plugin/Valid.class");
+        Path missingJarPath = Files.createTempFile("bob-missing-classpath", ".jar");
+        Files.delete(missingJarPath);
+        ClassLoader classLoader = new ClassLoader(this.getClass().getClassLoader()) {
+            @Override
+            public java.util.Enumeration<URL> getResources(String name) throws IOException {
+                return Collections.enumeration(Arrays.asList(
+                        URI.create("jar:" + validJarPath.toUri() + "!/" + name).toURL(),
+                        URI.create("jar:" + missingJarPath.toUri() + "!/" + name).toURL()));
+            }
+        };
+
+        try {
+            Set<String> classes = ClassLoaderScanner.scanClassLoader(classLoader, "com.example.plugin");
+            assertThat(classes, hasItem("com.example.plugin.Valid"));
+        } finally {
+            Files.deleteIfExists(validJarPath);
+            Files.deleteIfExists(missingJarPath);
+        }
+    }
+
+    private static Path createJarWithClass(String prefix, String classPath) throws IOException {
+        Path jarPath = Files.createTempFile(prefix, ".jar");
+        try (ZipOutputStream zip = new ZipOutputStream(Files.newOutputStream(jarPath))) {
+            zip.putNextEntry(new ZipEntry(classPath.substring(0, classPath.lastIndexOf('/') + 1)));
+            zip.closeEntry();
+            zip.putNextEntry(new ZipEntry(classPath));
+            zip.write(0);
+            zip.closeEntry();
+        }
+        return jarPath;
+    }
+
+    @Test
     public void testCopy() throws Exception {
         fileSystem.addFile("test.in", "test data".getBytes());
-        project.setInputs(Arrays.asList("test.in"));
+        project.setInputs(List.of("test.in"));
         List<TaskResult> result = build();
         assertThat(result.size(), is(1));
-        IResource testOut = fileSystem.get("test.out").output();
+        IResource testOut = fileSystem.get(ResourceUtil.minifyPath("test.out")).output();
         assertNotNull(testOut);
         assertThat(new String(testOut.getContent()), is("test data"));
     }
@@ -216,18 +274,93 @@ public class JBobTest {
     @Test
     public void testAbsPath() throws Exception {
         fileSystem.addFile("/root/test.in", "test data".getBytes());
-        project.setInputs(Arrays.asList("/root/test.in"));
+        project.setInputs(List.of("/root/test.in"));
         List<TaskResult> result = build();
         assertThat(result.size(), is(1));
-        IResource testOut = fileSystem.get("/root/test.out").output();
+        IResource testOut = fileSystem.get(ResourceUtil.minifyPath("/root/test.out")).output();
         assertThat(testOut.exists(), is(true));
         assertThat(new String(testOut.getContent()), is("test data"));
     }
 
     @Test
+    public void testExtractRejectsZipSlipEntries() throws Exception {
+        Path zipPath = Files.createTempFile("bob-extract-test", ".zip");
+        Path targetDir = Files.createTempDirectory("bob-extract-test");
+        Path outsideFile = targetDir.resolveSibling("escaped.txt");
+        try {
+            try (ZipOutputStream zip = new ZipOutputStream(Files.newOutputStream(zipPath))) {
+                zip.putNextEntry(new ZipEntry("../escaped.txt"));
+                zip.write("escaped".getBytes(StandardCharsets.UTF_8));
+                zip.closeEntry();
+            }
+
+            try {
+                Bob.extractToFolder(zipPath.toUri().toURL(), targetDir.toFile());
+                fail("Expected IOException");
+            } catch (IOException exception) {
+                assertTrue(exception.getMessage(), exception.getMessage().contains("resolves outside"));
+            }
+            assertFalse(Files.exists(outsideFile));
+        } finally {
+            Files.deleteIfExists(zipPath);
+            Files.deleteIfExists(outsideFile);
+            FileUtils.deleteDirectory(targetDir.toFile());
+        }
+    }
+
+    @Test
+    public void testAtomicExtractDirectoryExtractsCompleteDirectory() throws Exception {
+        Path zipPath = Files.createTempFile("bob-atomic-extract-test", ".zip");
+        Path targetDir = Files.createTempDirectory("bob-atomic-extract-test");
+        try {
+            try (ZipOutputStream zip = new ZipOutputStream(Files.newOutputStream(zipPath))) {
+                zip.putNextEntry(new ZipEntry("luajit/jit/bcsave.lua"));
+                zip.write("jit module".getBytes(StandardCharsets.UTF_8));
+                zip.closeEntry();
+            }
+
+            Bob.atomicExtractDirectory(zipPath.toUri().toURL(), targetDir.toFile(), "luajit");
+
+            assertTrue(Files.isRegularFile(targetDir.resolve("luajit/jit/bcsave.lua")));
+            File[] tmpFolders = targetDir.toFile().listFiles((dir, name) -> name.startsWith(".luajit_"));
+            assertTrue(tmpFolders == null || tmpFolders.length == 0);
+        } finally {
+            Files.deleteIfExists(zipPath);
+            FileUtils.deleteDirectory(targetDir.toFile());
+        }
+    }
+
+    @Test
+    public void testAtomicExtractDirectoryCleansTempFolderOnFailure() throws Exception {
+        Path zipPath = Files.createTempFile("bob-atomic-extract-test", ".zip");
+        Path targetDir = Files.createTempDirectory("bob-atomic-extract-test");
+        try {
+            try (ZipOutputStream zip = new ZipOutputStream(Files.newOutputStream(zipPath))) {
+                zip.putNextEntry(new ZipEntry("other/file.txt"));
+                zip.write("data".getBytes(StandardCharsets.UTF_8));
+                zip.closeEntry();
+            }
+
+            try {
+                Bob.atomicExtractDirectory(zipPath.toUri().toURL(), targetDir.toFile(), "luajit");
+                fail("Expected IOException");
+            } catch (IOException exception) {
+                assertTrue(exception.getMessage(), exception.getMessage().contains("did not contain directory"));
+            }
+
+            assertFalse(Files.exists(targetDir.resolve("luajit")));
+            File[] tmpFolders = targetDir.toFile().listFiles((dir, name) -> name.startsWith(".luajit_"));
+            assertTrue(tmpFolders == null || tmpFolders.length == 0);
+        } finally {
+            Files.deleteIfExists(zipPath);
+            FileUtils.deleteDirectory(targetDir.toFile());
+        }
+    }
+
+    @Test
     public void testChangeInput() throws Exception {
         fileSystem.addFile("test.in", "test data".getBytes());
-        project.setInputs(Arrays.asList("test.in"));
+        project.setInputs(List.of("test.in"));
         List<TaskResult> result;
 
         // build
@@ -251,7 +384,7 @@ public class JBobTest {
     @Test
     public void testRemoveOutput() throws Exception {
         fileSystem.addFile("test.in", "test data".getBytes());
-        project.setInputs(Arrays.asList("test.in"));
+        project.setInputs(List.of("test.in"));
         List<TaskResult> result;
 
         // build
@@ -259,7 +392,7 @@ public class JBobTest {
         assertThat(result.size(), is(1));
 
         // remove output
-        fileSystem.get("test.out").output().remove();
+        fileSystem.get(ResourceUtil.minifyPath("test.out")).output().remove();
 
         // rebuild
         result = build();
@@ -269,14 +402,14 @@ public class JBobTest {
     @Test
     public void testRemoveGeneratedOutput() throws Exception {
         fileSystem.addFile("test.dynamic", "1\n2\n".getBytes());
-        project.setInputs(Arrays.asList("test.dynamic"));
+        project.setInputs(List.of("test.dynamic"));
 
         // build
         List<TaskResult> result = build();
         assertThat(result.size(), is(3));
 
         // remove generated output, ie input to another task
-        fileSystem.get("test_0.numberc").output().remove();
+        fileSystem.get(ResourceUtil.minifyPath("test_0.numberc")).output().remove();
 
         // rebuild
         result = build();
@@ -294,7 +427,7 @@ public class JBobTest {
     @Test
     public void testCompileError() throws Exception {
         fileSystem.addFile("test.in_err", "test data_err".getBytes());
-        project.setInputs(Arrays.asList("test.in_err"));
+        project.setInputs(List.of("test.in_err"));
         List<TaskResult> result;
 
         // build
@@ -311,15 +444,26 @@ public class JBobTest {
     @Test(expected=CompileExceptionError.class)
     public void testCreateError() throws Exception {
         fileSystem.addFile("test.in_ce", "test".getBytes());
-        project.setInputs(Arrays.asList("test.in_ce"));
+        project.setInputs(List.of("test.in_ce"));
         // build
         build();
     }
 
     @Test
+    public void testConstructorCompileError() throws Exception {
+        fileSystem.addFile("test.in_constructor_error", "test".getBytes());
+        try {
+            project.createTask(project.getResource("test.in_constructor_error"), ConstructorExceptionBuilder.class);
+            fail("Expected the builder constructor to fail");
+        } catch (CompileExceptionError e) {
+            assertSame(ConstructorExceptionBuilder.ERROR, e);
+        }
+    }
+
+    @Test
     public void testMissingOutput() throws Exception {
         fileSystem.addFile("test.nooutput", "test data".getBytes());
-        project.setInputs(Arrays.asList("test.nooutput"));
+        project.setInputs(List.of("test.nooutput"));
         List<TaskResult> result = build();
         assertThat(result.size(), is(1));
         assertFalse(result.get(0).isOk());
@@ -333,20 +477,20 @@ public class JBobTest {
     @Test
     public void testDynamic() throws Exception {
         fileSystem.addFile("test.dynamic", "1\n2\n".getBytes());
-        project.setInputs(Arrays.asList("test.dynamic"));
+        project.setInputs(List.of("test.dynamic"));
         List<TaskResult> result = build();
         assertThat(result.size(), is(3));
-        assertThat(getResourceString("test_0.numberc"), is("10"));
-        assertThat(getResourceString("test_1.numberc"), is("20"));
-        assertThat(result.get(1).getTask().getProductOf(), is((Task) result.get(0).getTask()));
-        assertThat(result.get(2).getTask().getProductOf(), is((Task) result.get(0).getTask()));
+        assertThat(getResourceString(ResourceUtil.minifyPath("test_0.numberc")), is("10"));
+        assertThat(getResourceString(ResourceUtil.minifyPath("test_1.numberc")), is("20"));
+        assertThat(result.get(1).getTask().getProductOf(), is(result.get(0).getTask()));
+        assertThat(result.get(2).getTask().getProductOf(), is(result.get(0).getTask()));
     }
 
 
     @Test
     public void testChangeOptions() throws Exception {
         fileSystem.addFile("test.c", "f();".getBytes());
-        project.setInputs(Arrays.asList("test.c"));
+        project.setInputs(List.of("test.c"));
         List<TaskResult> result;
 
         // build
@@ -369,7 +513,7 @@ public class JBobTest {
     @Test
     public void testCompileErrorOutputCreated() throws Exception {
         fileSystem.addFile("test.foeao", "test".getBytes());
-        project.setInputs(Arrays.asList("test.foeao"));
+        project.setInputs(List.of("test.foeao"));
         List<TaskResult> result;
 
         // build
