@@ -1,4 +1,4 @@
-// Copyright 2020-2025 The Defold Foundation
+// Copyright 2020-2026 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
@@ -54,15 +54,17 @@ public class TextureSetLayout {
     {
         public int x;
         public int y;
-        public Pointi() {};
+        public Pointi() {}
+
         public Pointi(int x, int y) {
             this.x = x;
             this.y = y;
-        };
+        }
+
         public Pointi(Point p) {
             this.x = (int)p.x;
             this.y = (int)p.y;
-        };
+        }
     }
 
     public static class Sizei
@@ -72,7 +74,7 @@ public class TextureSetLayout {
         public Sizei(int width, int height) {
             this.width = width;
             this.height = height;
-        };
+        }
     }
 
     public static class Rectanglei
@@ -87,14 +89,14 @@ public class TextureSetLayout {
             this.y = y;
             this.width = width;
             this.height = height;
-        };
+        }
 
         public Rectanglei(Rectangle rect) {
             this.x = (int)rect.x;
             this.y = (int)rect.y;
             this.width = (int)rect.width;
             this.height = (int)rect.height;
-        };
+        }
 
         public Point getCenter() {
             return new Point(x + width * 0.5f, y + height * 0.5f);
@@ -261,23 +263,30 @@ public class TextureSetLayout {
         public int getHeight() {
             return height;
         }
+        public float getOccupancy() {
+            long used = 0;
+            for (Rect r : rectangles) {
+                used += (long) r.getWidth() * r.getHeight();
+            }
+            return (float) used / ((long) width * height);
+        }
 
         @Override
         public String toString() {
-            String s = "Layout:\n";
-            s += String.format("  width: %d:\n", width);
-            s += String.format("  height: %d:\n", height);
+            StringBuilder s = new StringBuilder("Layout:\n");
+            s.append(String.format("  width: %d:\n", width));
+            s.append(String.format("  height: %d:\n", height));
             for (Rect r : rectangles) {
-                s += String.format("  %s\n", r.toString());
+                s.append(String.format("  %s\n", r.toString()));
             }
-            s += "\n";
-            return s;
+            s.append("\n");
+            return s.toString();
         }
     }
 
     public static List<Layout> packedLayout(int margin, List<Rect> rectangles, boolean rotate, float maxPageSizeW, float maxPageSizeH) throws CompileExceptionError {
         if (rectangles.size() == 0) {
-            return Arrays.asList(new Layout(1, 1, new ArrayList<TextureSetLayout.Rect>()));
+            return List.of(new Layout(1, 1, new ArrayList<Rect>()));
         }
 
         return createMaxRectsLayout(margin, rectangles, rotate, maxPageSizeW, maxPageSizeH);
@@ -340,21 +349,107 @@ public class TextureSetLayout {
      * @param rotate
      * @return
      */
-    public static List<Layout> createMaxRectsLayout(int margin, List<Rect> rectangles, boolean rotate, float maxPageSizeW, float maxPageSizeH) throws CompileExceptionError {
-        // Sort by area first, then longest side
-        Collections.sort(rectangles, new Comparator<Rect>() {
-            @Override
-            public int compare(Rect o1, Rect o2) {
-                int a1 = o1.getArea();
-                int a2 = o2.getArea();
-                if (a1 != a2) {
-                    return a2 - a1;
-                }
-                int n1 = Math.max(o1.rect.width, o1.rect.height);
-                int n2 = Math.max(o2.rect.width, o2.rect.height);
+    // Seed orderings for the greedy MaxRects packer. Area descending is the
+    // historical order and remains the fast path. Fallback orderings are used
+    // only when the fast path leaves room for a strictly smaller result.
+    private static final Comparator<Rect> SORT_AREA_DESC = new Comparator<Rect>() {
+        @Override
+        public int compare(Rect o1, Rect o2) {
+            int a1 = o1.getArea();
+            int a2 = o2.getArea();
+            if (a1 != a2) {
+                return a2 - a1;
+            }
+            int n1 = Math.max(o1.rect.width, o1.rect.height);
+            int n2 = Math.max(o2.rect.width, o2.rect.height);
+            return n2 - n1;
+        }
+    };
+
+    private static final Comparator<Rect> SORT_LONGSIDE_DESC = new Comparator<Rect>() {
+        @Override
+        public int compare(Rect o1, Rect o2) {
+            int n1 = Math.max(o1.rect.width, o1.rect.height);
+            int n2 = Math.max(o2.rect.width, o2.rect.height);
+            if (n1 != n2) {
                 return n2 - n1;
             }
-        });
+            return o2.getArea() - o1.getArea();
+        }
+    };
+
+    private static final Comparator<Rect> SORT_PERIMETER_DESC = new Comparator<Rect>() {
+        @Override
+        public int compare(Rect o1, Rect o2) {
+            int p1 = o1.rect.width + o1.rect.height;
+            int p2 = o2.rect.width + o2.rect.height;
+            if (p1 != p2) {
+                return p2 - p1;
+            }
+            return o2.getArea() - o1.getArea();
+        }
+    };
+
+    // Fallback orderings for cases where the area-descending seed is not enough.
+    private static final List<Comparator<Rect>> ALTERNATE_SORTS =
+        Arrays.asList(SORT_LONGSIDE_DESC, SORT_PERIMETER_DESC);
+
+    // The smallest square power-of-two page that could conceivably hold all rects,
+    // bounded below by both the total area and the longest single side.
+    private static int minimumSquarePageSize(int margin, List<Rect> rectangles) {
+        int maxLengthScale = 0;
+        int area = 0;
+        for (Rect rect : rectangles) {
+            area += rect.getArea();
+            maxLengthScale = Math.max(maxLengthScale, rect.rect.width);
+            maxLengthScale = Math.max(maxLengthScale, rect.rect.height);
+        }
+        maxLengthScale += margin * 2;
+        return 1 << getExponentNextOrMatchingPowerOfTwo(Math.max((int)Math.sqrt(area), maxLengthScale));
+    }
+
+    // Ranks two candidate page-sets: fewer pages wins, then smaller page area.
+    // Strictly-better only, so an equal result keeps the incumbent (area-desc)
+    // layout and its exact rectangle positions.
+    private static boolean isBetterLayout(List<Layout> candidate, List<Layout> incumbent) {
+        if (candidate.size() != incumbent.size()) {
+            return candidate.size() < incumbent.size();
+        }
+        long ca = (long)candidate.get(0).getWidth() * (long)candidate.get(0).getHeight();
+        long ia = (long)incumbent.get(0).getWidth() * (long)incumbent.get(0).getHeight();
+        return ca < ia;
+    }
+
+    public static List<Layout> createMaxRectsLayout(int margin, List<Rect> rectangles, boolean rotate, float maxPageSizeW, float maxPageSizeH) throws CompileExceptionError {
+        // Fast path: historical area-descending order. Preserves existing layouts.
+        List<Layout> best = layoutWithSort(margin, rectangles, rotate, maxPageSizeW, maxPageSizeH, SORT_AREA_DESC);
+
+        // Only retry alternate orderings when the fast path is not already optimal:
+        // a paged atlas that needed more than one page, or a single-page atlas that
+        // had to grow past the minimal square page. Keeps the common case at 1x cost.
+        boolean useMaxPageSize = maxPageSizeW > 0 && maxPageSizeH > 0;
+        boolean optimal;
+        if (useMaxPageSize) {
+            optimal = best.size() <= 1;
+        } else {
+            int floor = minimumSquarePageSize(margin, rectangles);
+            Layout page = best.get(0);
+            optimal = page.getWidth() <= floor && page.getHeight() <= floor;
+        }
+
+        if (!optimal) {
+            for (Comparator<Rect> comparator : ALTERNATE_SORTS) {
+                List<Layout> candidate = layoutWithSort(margin, rectangles, rotate, maxPageSizeW, maxPageSizeH, comparator);
+                if (isBetterLayout(candidate, best)) {
+                    best = candidate;
+                }
+            }
+        }
+        return best;
+    }
+
+    private static List<Layout> layoutWithSort(int margin, List<Rect> rectangles, boolean rotate, float maxPageSizeW, float maxPageSizeH, Comparator<Rect> comparator) throws CompileExceptionError {
+        Collections.sort(rectangles, comparator);
 
         boolean useMaxPageSize       = maxPageSizeW > 0 && maxPageSizeH > 0;
         final int defaultMinPageSize = 16;
@@ -401,17 +496,8 @@ public class TextureSetLayout {
 
             return layouts;
         } else {
-            // Calculate total area of rectangles and the max length of a rectangle
-            int maxLengthScale = 0;
-            int area = 0;
-            for (Rect rect : rectangles) {
-                area += rect.getArea();
-                maxLengthScale = Math.max(maxLengthScale, rect.rect.width);
-                maxLengthScale = Math.max(maxLengthScale, rect.rect.height);
-            }
-            maxLengthScale += margin * 2;
             // Ensure the longest length found in all of the images will fit within one page, irrespective of orientation.
-            final int defaultMaxPageSize = 1 << getExponentNextOrMatchingPowerOfTwo(Math.max((int)Math.sqrt(area), maxLengthScale));
+            final int defaultMaxPageSize = minimumSquarePageSize(margin, rectangles);
             MaxRectsLayoutStrategy.Settings settings = new MaxRectsLayoutStrategy.Settings();
             settings.maxPageHeight = defaultMaxPageSize;
             settings.maxPageWidth = defaultMaxPageSize;
@@ -451,11 +537,12 @@ public class TextureSetLayout {
         public Point(float x, float y) {
             this.x = x;
             this.y = y;
-        };
+        }
+
         public Point(Point rhs) {
             this.x = rhs.x;
             this.y = rhs.y;
-        };
+        }
 
         public float getX()                 { return x; }
         public void setX(float x)           { this.x = x; }
@@ -470,7 +557,7 @@ public class TextureSetLayout {
         public Size(float width, float height) {
             this.width = width;
             this.height = height;
-        };
+        }
 
         public float getWidth()                 { return width; }
         public void setWidth(float width)       { this.width = width; }
@@ -489,7 +576,7 @@ public class TextureSetLayout {
             this.y = y;
             this.width = width;
             this.height = height;
-        };
+        }
 
         public float getX()                 { return x; }
         public void setX(float x)           { this.x = x; }
@@ -561,26 +648,26 @@ public class TextureSetLayout {
         }
 
         public void debugPrint() {
-            System.out.printf("SourceImage {\n");
+            System.out.print("SourceImage {\n");
             System.out.printf("    name: %s\n", name);
-            System.out.printf("    rotated: %s\n", rotated?"true":"false");
+            System.out.printf("    rotated: %s\n", Boolean.toString(rotated));
             //System.out.printf("    originalSize: %f, %f\n", originalSize.width, originalSize.height);
             System.out.printf("    pivot: %f, %f\n", pivot.x, pivot.y);
             System.out.printf("    rect: %f, %f, %f, %f\n", rect.x, rect.y, rect.width, rect.height);
-            System.out.printf("    vertices:  {\n");
+            System.out.print("    vertices:  {\n");
             for (Point p : vertices)
             {
                 System.out.printf("        %f, %f\n", p.x, p.y);
             }
-            System.out.printf("    }\n");
-            System.out.printf("    indices:  {\n");
+            System.out.print("    }\n");
+            System.out.print("    indices:  {\n");
             for (int i : indices)
             {
                 System.out.printf("        %d", i);
             }
-            System.out.printf("\n");
-            System.out.printf("    }\n");
-            System.out.printf("}\n");
+            System.out.print("\n");
+            System.out.print("    }\n");
+            System.out.print("}\n");
         }
     }
 
